Bug 603366 NewCompartment leaks compartment when compartment->init() fails, r=gal